# dcc_3rd

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  README_cn.md
draft/: build.sh  cos_similarity.py  cosine_similarity.h  main.cpp  result.h  result.ori.h  result_writer.h  search_best.h  timer.h  write_data_test.cpp
draft/blas_demos/: build.sh  data_reader.h  main.cc  timer.h
src/: build.sh  main.cc  verify
src/include/: args.h  calc.h  constants.h  data_reader.h  read_vec.h  result.h  result.ori.h  result_writer.h  timer.h  timer_test.cpp
test/: args.h  rand_demo.cpp  random_vec.cpp
test/rand_gen_vec_file/: random_vec.cpp
test/verify/: main.cc
